src/components/asideNav/AsideNav.css
/* Side Nav */

.side-nav {
  width: 255px;
  background-color: var(--side-nav-dark-bg);
  color: var(--plain-white);
  flex-shrink: 0;
  height: 100vh;
}

.side-nav .brand-container {
  padding: 2.2rem 2rem;
  margin-bottom: 1rem;
  border-bottom: solid 2px #666666;
}

.side-nav .nav-brand {
  margin-right: 1rem;
}

.side-nav .brand-logo {
  width: 21px;
  margin-right: 0.5rem;
  border-radius: 2px;
}

.side-nav .brand {
  font-size: 2rem;
}

.ham-icon {
  visibility: hidden;
  position: absolute;
}

.side-nav .item {
  padding: 1.8rem;
  display: flex;
  column-gap: 2.5rem;
  align-items: center;
  cursor: pointer;
  border-left: solid 4px transparent;
  background-color: transparent;
  color: var(--plain-white);
  text-decoration: none;
}

.side-nav .item.active {
  background-color: var(--side-nav-hover-bg);
  border-left: solid 4px #4e95ff;
}

.side-nav .item:hover {
  background-color: var(--side-nav-hover-bg);
  border-left: solid 4px #a2b5d1;
}

/* Media Query */

@media screen and (max-width: 1024px) {
  .ham-icon {
    visibility: visible;
    position: static;
    font-size: 2rem;
    color: var(--plain-white);
    margin-right: 1rem;
  }

  .side-nav {
    position: fixed;
    transform: translateX(-100%);
    transition: transform 0.5s ease-in-out;
    z-index: 10;
    box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
  }

  .side-nav.active {
    transform: translateX(0%);
    transition: transform 0.5s ease-in-out;
  }
}

